--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
 </head>
 <body class="white"><div class="reveal"><span class="slides">
     <section class="center title-slide">
-        <h1>React II (хуки)</h1>
+        <h1>React-хуки</h1>
         <br />
         <p><span class="red">Т</span>ощилин Сергей</p>
     </section>
